2008-09-04  Dan Fandrich <dan@coneharvesters.com>

	po/nl.po: Updated Dutch translation by Erwin Poeze

2008-07-25  Marcus Meissner  <marcus@jet.franken.de>

	* libexif/exif-content.c: Handle realloc to 0 case
	  correctly. Fixes EOG and GIMP crashes.

2008-06-26  Jan Patera <patera@users.sourceforge.net>

	* libexif/olympus/exif-mnote-data-olympus.c: better support for
	  MNOTE_OLYMPUS_TAG_FLASHDEVICE/SENSORTEMPERATURE/LENSTEMPERATURE

2008-06-23  Lutz Mueller <lutz@users.sourceforge.net>

	Patch by Mika Raento <mikie@google.com>:

	* libexif/exif-loader.c: (exif_loader_free) Don't forget the logger.

2008-06-15  Lutz Mueller <lutz@users.sourceforge.net>

	* configure.ac: Revert previous commit
	* po/zh_CN.po: Remove.
	* po/[sk,vi].po: Revert.

2008-06-15  Lutz Mueller <lutz@users.sourceforge.net>

	* configure.ac: New po-file: zh_CN
	* po/zh_CN.po: New
	* po/[sk,vi].po: Updated.

2008-05-06  Marcus Meissner  <meissner@suse.de>

	* libexif/exif-content.c: Fixed a endless loop
	  possibility in content remove (triggered by EOG
	  and potentially others on certain JPEGs).

2008-04-03  Dan Fandrich <dan@coneharvesters.com>

	po/sk.po: Updated Slovak translation by Ivan Masár

2008-02-20  Lutz Mueller <lutz@users.sourceforge.net>

	Follow-up on #1774591:

	* libexif/exif-data.c: (exif_data_save_data_content) Remove check for
	now impossible NULL value.

2008-02-17  Lutz Mueller <lutz@users.sourceforge.net>

	Fix #1865046:

	* COPYING:
	* libexif/...: Use 'ue' instead of some strange German character.

2008-02-17  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-loader.c: (exif_loader_get_data) Return NULL if no
	EXIF data has been found.

2008-02-16  Lutz Mueller <lutz@users.sourceforge.net>

	Jan Patera <patera@pictview.com> spotted a problem with my last fix
	for #1774591:

	* libexif/exif-content.c: (exif_content_remove_entry) Recover
	correctly in case of error by remembering the original size of the
	realloc'ed data.